appId: com.tanuki75.noctalia
---
- tapOn:
    id: tab.home
- tapOn:
    id: btn.header.home.settings
- runFlow:
    when:
      visible:
        id: quick-settings.all
    commands:
      - tapOn:
          id: quick-settings.all
- extendedWaitUntil:
    visible:
      id: screen.settings
    timeout: 15000
